@@ -1,5 +1,14 @@
 2008-12-09  Dan Williams  <dcbw@redhat.com>
 
+	* src/applet-device-wifi.c
+		- (other_wireless_activate_cb, new_network_activate_cb,
+		   wireless_get_more_info, wireless_get_secrets): really fix focus
+			stealing prevention; the window needs to be visible before trying
+			to present it with an updated time, otherwise GTK just calls
+			gtk_window_show() instead of setting the timestamp
+
+2008-12-09  Dan Williams  <dcbw@redhat.com>
+
 	* src/applet.c
 		- (applet_pre_keyring_callback): ensure that the menu is actually
 			destroyed before letting the keyring calls happen
